# OBC_COM

./: .mxproject  CMakeLists.txt  OBC_COM.ioc  README.md  STM32H563xx_FLASH.ld  STM32H563xx_RAM.ld
Core/Inc/: FreeRTOSConfig.h  app_freertos.h  main.h  sdmmc.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  user_diskio.h
Core/Inc/Backup/: FreeRTOSConfig.h.bak  app_freertos.h.bak  ffconf.h.bak  gpdma.h.bak  main.h.bak  stm32h5xx_hal_conf.h.bak  stm32h5xx_it.h.bak  usart.h.bak
Core/Src/: adc.c  app_freertos.c  fdcan.c  gpdma.c  gpio.c  i2c.c  main.c  sdmmc.c  spi.c  stm32h5xx_it.c  tim.c  usart.c  usb.c  user_diskio.c
Core/Src/Backup/: adc.c.bak  app_freertos.c.bak  crc.c.bak  fdcan.c.bak  gpdma.c.bak  gpio.c.bak  i2c.c.bak  main.c.bak  sdmmc.c.bak  spi.c.bak  stm32h5xx_it.c.bak  usart.c.bak  user_diskio.c.bak
My_Middlewares/FatFs/: CmakeLists.txt
app/: CMakeLists.txt
app/include/: board_data.h  cmd_task.h  gps_task.h  lora_config.h  rfm95w_task.h  sd_task.h  sx1280_task.h  telemetry_task.h  uart_task.h  usb_config.h
app/src/: board_data.c  cmd_task.c  gps_task.c  lora_config.c  rfm95w_task.c  sd_task.c  sx1280_task.c  telemetry_task.c  uart_task.c  usb_config.c
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
cmd/: CMakeLists.txt  CmakeLists.txt  README.md
cmd/Inc/: cmd_interface.h
cmd/Src/: cmd_interface.c
modules/RF_driver/include/: rf_driver.h
modules/RF_driver/src/: rf_driver.c
modules/USB/: CMakeLists.txt
modules/USB/Class/CDC/Inc/: usbd_cdc.h  usbd_cdc_if.h
modules/USB/Class/CDC/Src/: usbd_cdc.c  usbd_cdc_if.c
modules/USB/Core/Inc/: usbd_conf.h  usbd_core.h  usbd_ctlreq.h  usbd_def.h  usbd_desc.h  usbd_ioreq.h
modules/USB/Core/Src/: usbd_conf.c  usbd_core.c  usbd_ctlreq.c  usbd_desc.c  usbd_ioreq.c
modules/gps/: CMakeLists.txt
modules/gps/Inc/: GNSS.h
modules/gps/Src/: GNSS.c
modules/logger/: CMakeLists.txt
modules/logger/include/: logger.h  logger_macros.h  logger_serial_output.h
modules/logger/src/: logger.c  logger_serial_output.c
modules/loraApi/: CMakeLists.txt
modules/loraApi/include/: lora_utilities.h
modules/loraApi/src/: lora_utilities.c
modules/rfm95w/: CMakeLists.txt
modules/rfm95w/include/: rfm95w.h
modules/rfm95w/src/: rfm95w.c
modules/ringBuffer/: CMakeLists.txt
modules/ringBuffer/include/: ring_buffer.h
modules/ringBuffer/src/: ring_buffer.c
modules/sx1280/: CMakeLists.txt
modules/sx1280/include/: sx1280-hal.h  sx1280.h
modules/sx1280/src/: sx1280-hal.c  sx1280.c
nvs/: CMakeLists.txt
nvs/Inc/: eeprom_emul_conf.h  flash.h  flash_interface.h  nvs_config.h
nvs/src/: flash_interface.c  nvs_config.c
wrappers/rfm95w/: CMakeLists.txt
wrappers/rfm95w/include/: rfm95w_wrapper.h
wrappers/rfm95w/src/: rfm95w_wrapper.c
wrappers/spi/: CMakeLists.txt
wrappers/spi/include/: spi_callbacks.h
wrappers/spi/src/: spi_callbacks.c
wrappers/sx1280/: CMakeLists.txt
wrappers/sx1280/include/: sx1280_hal_wrapper.h
wrappers/sx1280/src/: sx1280_hal_wrapper.c
